# Matrix-Magiq-Eigenlayer

./: Cargo.toml  README.md
frontend/leptos-app/: Cargo.toml
frontend/nextjs/: package.json
frontend/nextjs/rust-api/: Cargo.toml
frontend/nextjs/rust-api/src/: lib.rs
src/: lib.rs
