[package]
name = "matrix-magiq-eigenlayer"
version = "0.1.0"
authors = ["Matrix-Magiq Team"]
edition = "2021"
description = "Eigenlayer implementation for the Matrix-Magiq ecosystem"
repository = "https://github.com/Skhi-Bridges/Matrix-Magiq-Eigenlayer"
license = "GPL-3.0"

[dependencies]
# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

# Polkadot dependencies
xcm = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false }

# Ethereum compatibility
ethabi = { version = "17.0", default-features = false }
ethereum = { version = "0.12.0", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false }

# Quantum-resistant crypto
pqcrypto = { version = "0.12.0", default-features = false }

# Error correction dependencies 
reed-solomon-erasure = { version = "4.0", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-staking/std",
    "pallet-session/std",
    "xcm/std",
    "xcm-executor/std",
    "polkadot-parachain/std",
    "ethabi/std",
    "ethereum/std",
    "ethereum-types/std",
    "pqcrypto/std",
    "reed-solomon-erasure/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
